# fat-contract-s3-sync

./: Cargo.toml  README.md  aws_signature_example.py  lib.rs  rust-toolchain.toml
