[package]
name = "fat_contract_s3_sync"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
pink-extension = { version = "0.1.13", default-features = false }

sha2 = { version = "0.10.2", default-features = false }
hmac = { version = "0.12.1", default-features = false }
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
chrono = { version = "=0.4.19", default-features = false, features = ["alloc"] }
aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
cipher = { version = "0.4.3", default-features = false }

[lib]
name = "fat_contract_s3_sync"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "chrono/std"
]

ink-as-dependency = []